# qcalc

./: CMakeLists.txt  README.md
cmake/Modules/: FindMPFR.cmake  FindMPIR.cmake
include/: basic_mode.h  buttons.h  display.h  filters.h  mainwindow.h  parser.h  parser.ipp  qcalc.h  titlebar.h  utils.h
resources/: resources.qrc  resources.rc  style.qss
src/: CMakeLists.txt  basic_mode.cpp  buttons.cpp  display.cpp  filters.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  parser.cpp  qcalc.cpp  titlebar.cpp  utils.cpp
test/: CMakeLists.txt  parser_test.cpp
